# hs-boilerplate

./: Makefile  ghc_switch.sh  hs-install-ghc  hs-uninstall-ghc
template-project-foo/: README.md  foo.cabal
